--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -12,8 +12,17 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".ChecklistActivity"
+            android:name=".NewWorkActivity"
             android:label="@string/title_activity_checklist" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".InitialActivity"
+            android:label="@string/title_activity_initial" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
