--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,6 +12,15 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
+            android:name=".InitialActivity"
+            android:label="@string/title_activity_initial" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".NewWorkActivity"
             android:label="@string/title_activity_checklist" >
             <intent-filter>
@@ -21,8 +30,17 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".InitialActivity"
-            android:label="@string/title_activity_initial" >
+            android:name=".ChecklistActivity"
+            android:label="@string/title_activity_checklist" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".VisitationActivity"
+            android:label="@string/title_activity_visitation" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
